fixed image alignment on object page template

--- a/css/object-pages.css
+++ b/css/object-pages.css
@@ -1,4 +1,14 @@
-/* .object-img_wrapper {} */
+.object-img_wrapper {
+  display: flex;
+}
+
+.object__img {
+  display: block;
+  justify-content: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 5%;
+}
 
 .object__data {
   display: grid;
